test/runtime/configMatters/comm/ugni/SIGBUS-array-alloc.good
SIGBUS-array-alloc.chpl:15: error: Out of memory allocating "array elements"
