test/runtime/configMatters/comm/ugni/SIGBUS-array-alloc.skipif
#!/usr/bin/env python

# This test only makes sense with hugepages, but not on ARM where it
# runs for a really long time and nevertheless may not fail.

import os
print(os.getenv('HUGETLB_DEFAULT_PAGE_SIZE') == None or
      os.getenv('CHPL_TARGET_CPU', '') in ['aarch64',
                                           'arm-thunderx',
                                           'arm-thunderx2'])

